Text adjustments in settings

--- a/homeassistant-version-control/public/index.html
+++ b/homeassistant-version-control/public/index.html
@@ -289,7 +289,7 @@
               </div>
               <p style="color: var(--text-secondary); font-size: 12px; margin-top: 6px; margin-left: 2px;"
                 data-i18n="settings.history_retention_desc">
-                How long to keep commit history. Time: keep versions newer than X time. Versions: keep last X versions.
+                Merge versions older than the specified time period into a single version
               </p>
             </div>
           </div>
@@ -354,7 +354,7 @@
                 <div style="display: flex; flex-direction: column;">
                   <span style="color: var(--text-primary); font-size: 14px;">Diff Change Mode</span>
                   <span style="color: var(--text-secondary); font-size: 12px; margin-top: 4px;">
-                    Show what each version changed
+                    Show what changed in each version
                   </span>
                 </div>
                 <div class="toggle-switch">
