--- a/homeassistant-version-control/public/index.html
+++ b/homeassistant-version-control/public/index.html
@@ -289,7 +289,7 @@
               </div>
               <p style="color: var(--text-secondary); font-size: 12px; margin-top: 6px; margin-left: 2px;"
                 data-i18n="settings.history_retention_desc">
-                Merge versions older than the specified time period into a single version
+                Merge versions older than the specified time period
               </p>
             </div>
           </div>
