Setting ui adjustment

--- a/homeassistant-version-control/public/index.html
+++ b/homeassistant-version-control/public/index.html
@@ -437,14 +437,14 @@
 
                 <!-- Connected State -->
                 <div id="githubConnected"
-                  style="display: none; padding: 12px; background: var(--bg-tertiary); border-radius: var(--radius-md);">
-                  <div style="display: flex; align-items: center; gap: 12px;">
-                    <img id="githubAvatar" src="" alt="" style="width: 32px; height: 32px; border-radius: 50%;">
-                    <div id="githubUsername" style="color: var(--text-primary); font-weight: 500;"></div>
-                    <div style="color: var(--success); font-size: 12px; margin-left: auto; margin-right: 12px;">✓
-                      Connected</div>
+                  style="display: none; padding: 8px 12px; background: var(--bg-tertiary); border-radius: var(--radius-md);">
+                  <div style="display: flex; align-items: center; gap: 10px;">
+                    <img id="githubAvatar" src="" alt="" style="width: 24px; height: 24px; border-radius: 50%;">
+                    <div id="githubUsername" style="color: var(--text-primary); font-size: 14px; font-weight: 500;">
+                    </div>
+                    <div style="color: var(--success); font-size: 12px; margin-left: auto;">✓ Connected</div>
                     <button class="btn" onclick="disconnectGitHub()"
-                      style="background: var(--danger); padding: 4px 10px; font-size: 12px;"
+                      style="background: var(--danger); padding: 2px 8px; font-size: 11px; margin-left: 8px;"
                       data-i18n="settings.cloud_disconnect">Disconnect</button>
                   </div>
                 </div>
@@ -483,9 +483,9 @@
                     <label for="cloudIncludeSecrets" class="toggle-slider"></label>
                   </div>
                 </label>
-                <p style="color: var(--text-secondary); font-size: 12px; margin-top: 6px; margin-left: 2px;"
+                <p style="color: var(--text-secondary); font-size: 12px; margin-top: 4px; margin-left: 2px;"
                   data-i18n="settings.cloud_include_secrets_desc">
-                  Warning: This will upload your sensitive secrets to the cloud.
+                  Checking this adds secrets.yaml to the cloud backup.
                 </p>
               </div>
 
