--- a/homeassistant-version-control/public/index.html
+++ b/homeassistant-version-control/public/index.html
@@ -482,9 +482,10 @@
                       style="display: flex; align-items: center; justify-content: space-between; margin-top: 8px; padding: 0 2px;">
                       <span style="color: var(--text-secondary); font-size: 12px;"
                         data-i18n="settings.cloud_github_waiting">Waiting for authorization...</span>
-                      <span onclick="cancelGitHubConnect()"
-                        style="color: var(--text-tertiary); font-size: 12px; cursor: pointer;"
-                        data-i18n="app.cancel">Cancel</span>
+                      <button onclick="cancelGitHubConnect()"
+                        style="padding: 6px 12px; background: var(--bg-tertiary); border: 1px solid var(--border-subtle); border-radius: var(--radius-md); color: var(--text-primary); font-size: 12px; cursor: pointer; transition: filter 0.15s ease;"
+                        onmouseover="this.style.filter='brightness(1.2)'" onmouseout="this.style.filter='brightness(1)'"
+                        data-i18n="app.cancel">Cancel</button>
                     </div>
                   </div>
 
