--- a/homeassistant-version-control/public/index.html
+++ b/homeassistant-version-control/public/index.html
@@ -496,18 +496,16 @@
                     style="display: none; padding: 8px 12px; background: var(--bg-tertiary); border-radius: var(--radius-md);">
                     <div style="display: flex; align-items: center; gap: 10px;">
                       <img id="githubAvatar" src="" alt="" style="width: 24px; height: 24px; border-radius: 50%;">
-                      <div id="githubUsername" style="color: var(--text-primary); font-size: 14px; font-weight: 500;">
-                      </div>
+                      <a id="githubRepoLink" href="#" target="_blank"
+                        style="color: var(--text-primary); font-size: 14px; font-weight: 500; text-decoration: none;"
+                        onmouseover="this.style.color='var(--accent-blue)'; this.style.textDecoration='underline'"
+                        onmouseout="this.style.color='var(--text-primary)'; this.style.textDecoration='none'">
+                      </a>
                       <div style="color: var(--success); font-size: 12px; margin-left: auto;">✓ Connected</div>
                       <button class="btn" onclick="disconnectGitHub()"
                         style="background: var(--danger); padding: 2px 8px; font-size: 11px; margin-left: 8px;"
                         data-i18n="settings.cloud_disconnect">Disconnect</button>
                     </div>
-                    <a id="githubRepoLink" href="#" target="_blank"
-                      style="display: block; margin-top: 6px; padding-left: 34px; color: var(--text-secondary); font-size: 12px; text-decoration: none;"
-                      onmouseover="this.style.color='var(--accent-blue)'"
-                      onmouseout="this.style.color='var(--text-secondary)'">
-                    </a>
                   </div>
                 </div>
               </div>
