--- a/homeassistant-version-control/public/index.html
+++ b/homeassistant-version-control/public/index.html
@@ -401,7 +401,7 @@
                     <span style="color: var(--text-primary); font-size: 14px;"
                       data-i18n="settings.cloud_remote_url">Remote URL</span>
                   </label>
-                  <input type="text" id="cloudRemoteUrl" placeholder="http://192.168.1.x:3000/user/repo.git" style="
+                  <input type="text" id="cloudRemoteUrl" placeholder="https://git.example.com/user/project.git" style="
                     width: 100%;
                     padding: 10px 12px;
                     background: var(--bg-tertiary);
